// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio > should render correctly 1`] = `
<div>
  <label
    class="ant-radio-wrapper css-dev-only-do-not-override-oc1rc0 css-var-root ant-radio-css-var"
  >
    <span
      class="ant-radio ant-wave-target"
    >
      <input
        class="ant-radio-input"
        type="radio"
        value="aetna"
      />
    </span>
  </label>
</div>
`;

exports[`RadioGroup > should render correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-solid css-dev-only-do-not-override-oc1rc0 css-var-root ant-radio-css-var"
    role="radiogroup"
  >
    <label
      class="ant-radio-button-wrapper css-dev-only-do-not-override-oc1rc0 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="aetna"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        aetna
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper css-dev-only-do-not-override-oc1rc0 css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="cigna"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        cigna
      </span>
    </label>
  </div>
</div>
`;
